2005-11-25  Brian Warner  <warner@lothar.com>

	* buildbot/scheduler.py (Scheduler): change fileIsImportant
	handling: treat self.fileIsImportant more as an attribute that
	contains a callable than as a method. If the attribute is None,
	don't call it and assume all filenames are important. It is still
	possible to provide a fileIsImportant method in a subclass,
	however.
	(AnyBranchScheduler): handle fileIsImportant=None, previously it
	was broken
	* buildbot/test/test_scheduler.py (Scheduling.testAnyBranch2):
	test using AnyBranchScheduler with fileIsImportant=None

2005-11-24  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_config.py (StartService): don't claim a fixed
	port number, instead set slavePort=0 on the first pass, figure out
	what port was allocated, then switch to a config file that uses
	the allocated port.

	* buildbot/master.py (BuildMaster.loadConfig): close the old
	slaveport before opening the new one, because unit tests might
	replace slavePort=0 with the same allocated portnumber, and if we
	don't wait for the old port to close first, we get a "port already
	in use" error. There is a tiny race condition here, but the only
	threat is from other programs that bind (statically) to the same
	port number we happened to be allocated, and only if those
	programs use SO_REUSEADDR, and only if they get control in between
	reactor turns.

	* Makefile (TRIALARGS): update to handle Twisted > 2.1.0

	* buildbot/master.py (BuildMaster.loadConfig_Sources): remove all
	deleted ChangeSources before adding any new ones
	* buildbot/changes/freshcvs.py (FreshCVSSourceNewcred): fix
	compare_attrs, to make sure that a config-file reload does not
	unnecessarily replace an unmodified ChangeSource instance
	* buildbot/test/test_config.py (ConfigTest.testSources): update

	* buildbot/scheduler.py (AnyBranchScheduler): fix branches=[] to
	mean "don't build anything", and add a warning if it gets used
	because it isn't actually useful.
